# PyGapeVision

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml
configs/: peak_alignment_candidates.yaml  processing_config.yaml  sync_overrides.csv  sync_overrides_warn.csv
docs/: BATCH_PROCESSING_QUICKSTART.md  DELTA_GAPE_GUIDE.md  DOCKER.md  MASTER_DATASHEET_WORKFLOW.md  SPEEDUP_GUIDE.md  TRACKING_METHODS.md
scripts/: analyze_hook.py  analyze_synced.py
scripts/batch/: analyze_batch_statistics.py  analyze_by_configuration.py  analyze_by_mono_diameter.py  analyze_failure_points.py  auto_assign_sync_overrides.py  batch_process.sh  batch_process_parallel.sh  check_progress.sh  collect_batch_metrics.py  convert_sync_overrides_to_yaml.py  generate_sync_config.py  manual_review_list.txt  plot_combined_force_39mm.py  plot_force_summary.py  populate_master_datasheet.py  review_sync_plots.py  run_manual_review.sh  run_yaml_batch.py  validate_results.py  visualize_batch_statistics.py
scripts/calibration/: HSV_OVERRIDE_GUIDE.md  MANUAL_TRACKING_GUIDE.md  calibrate.py  example_calibration_usage.py  extract_first_frame.py  select_tracking_points.py
scripts/debug/: analyze_colors.py  check_hsv_at_position.py  debug_regions.py  export_frame_with_grid.py  sample_hsv_from_video.py  test_edge_validation.py  test_tracking.py  tune_hsv.py
src/: __init__.py  calibration.py  datasheet.py  sync.py  tracker.py  visualization.py
tests/: test_import.py
utils/: create_schematic.py  select_tip.py
